--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,8 +123,6 @@ jobs:
         export BINBO_UCI_ENGINE_HOST=localhost
         export BINBO_UCI_ENGINE_PORT=9010
         rebar3 ct
-    - name: Dialyzer
-      run: rebar3 dialyzer
     - name: Code coverage
       run: rebar3 cover
 
@@ -149,7 +147,10 @@ jobs:
     - name: Install Erlang
       run: choco install erlang -y
     - name: Install rebar3
-      run: choco install rebar3 --version=3.13.1 -y
+      run: |
+        mkdir ~/rebar3-dl
+        Invoke-WebRequest -Uri https://github.com/erlang/rebar3/releases/download/3.18.0/rebar3 -OutFile ~/rebar3-dl/rebar3
+        Copy-Item -Path .\test\helper-files\rebar3.cmd -Destination ~/rebar3-dl/rebar3.cmd
     - name: Install Stockfish
       run: |
         Invoke-WebRequest -Uri https://github.com/official-stockfish/Stockfish/releases/download/sf_16/stockfish-windows-x86-64.zip -OutFile ~/stockfish-windows-x86-64.zip
@@ -171,13 +172,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-${{ steps.branch-name.outputs.branch }}-hex-
     - name: Compile
-      run: rebar3 compile
+      run: ~/rebar3-dl/rebar3.cmd compile
     - name: CT tests
       run: |
         $env:BINBO_UCI_ENGINE_PATH = (Resolve-Path '~/stockfish/stockfish-windows-x86-64.exe').Path.replace('\', '/')
         echo "BINBO_UCI_ENGINE_PATH=$env:BINBO_UCI_ENGINE_PATH"
-        rebar3 ct
-    - name: Dialyzer
-      run: rebar3 dialyzer
+        ~/rebar3-dl/rebar3.cmd ct
     - name: Code coverage
-      run: rebar3 cover
+      run: ~/rebar3-dl/rebar3.cmd cover
