--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,8 @@ jobs:
         export BINBO_UCI_ENGINE_HOST=localhost
         export BINBO_UCI_ENGINE_PORT=9010
         rebar3 ct
+    - name: Dialyzer
+      run: rebar3 dialyzer
     - name: Code coverage
       run: rebar3 cover
 
@@ -149,7 +151,7 @@ jobs:
     - name: Install rebar3
       run: |
         mkdir ~/rebar3-dl
-        Invoke-WebRequest -Uri https://github.com/erlang/rebar3/releases/download/3.18.0/rebar3 -OutFile ~/rebar3-dl/rebar3
+        Invoke-WebRequest -Uri https://github.com/erlang/rebar3/releases/download/3.22.1/rebar3 -OutFile ~/rebar3-dl/rebar3
         Copy-Item -Path .\test\helper-files\rebar3.cmd -Destination ~/rebar3-dl/rebar3.cmd
     - name: Install Stockfish
       run: |
@@ -178,5 +180,7 @@ jobs:
         $env:BINBO_UCI_ENGINE_PATH = (Resolve-Path '~/stockfish/stockfish-windows-x86-64.exe').Path.replace('\', '/')
         echo "BINBO_UCI_ENGINE_PATH=$env:BINBO_UCI_ENGINE_PATH"
         ~/rebar3-dl/rebar3.cmd ct
+    - name: Dialyzer
+      run: ~/rebar3-dl/rebar3.cmd dialyzer
     - name: Code coverage
       run: ~/rebar3-dl/rebar3.cmd cover
